[project]
name = "mpcbf"
version = "0.1.0"
description = "multi policy CBF"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "cvxpy",
    "casadi",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpcbf"]

[tool.uv]
dev-dependencies = []

