[project]
name = "mpcbf"
version = "0.1.0"
description = "multi policy CBF"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "cvxpy",
    "casadi",
    "do-mpc>=5.1.1",
    "shapely>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpcbf"]

[tool.uv]
dev-dependencies = []

