[project]
name = "plcbf"
version = "0.1.0"
description = "multi policy CBF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "cvxpy",
    "casadi",
    "do-mpc>=5.1.1",
    "shapely>=2.0.7",
    # JAX for PCBF (Apple Silicon compatible)
    "jax",
    "jaxlib",
    # QP solver (cvxpy is already included, use it for QP)
    "flax>=0.10.7",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plcbf"]

[tool.uv]
dev-dependencies = []

